# JAX-GalSim

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: benchmarks.yaml  docs.yaml  docs.yml  python_package.yaml  release.yml
dev/notebooks/: lanczos_interp_devel.ipynb  moffat_maxk_interp.ipynb  psuedo_pade_utils.py  spergel_fixed_point.ipynb  spergel_hlr_flux_radius_approx.ipynb
docs/: Makefile  api-coverage.md  api-coverage.rst  conf.py  index.md  index.rst  installation.rst  notable-differences.md  notable-differences.rst  quickstart.rst  requirements.txt  sharp-bits.rst  update_api_coverage.py  versioning.rst
docs/_ext/: galsim_docstring.py
docs/_static/: custom.css
docs/api/: core.rst  fits.rst  gsobjects.rst  image.md  image.rst  index.rst  interpolation.rst  noise.rst  photon_shooting.rst  wcs.rst  weak-lensing.rst
docs/architecture/: drawing.md  gsobject.md  implements.md  index.md  pytree.md
docs/getting-started/: index.md  (+3 more)
examples/: demo1.py  demo2.py
galaxim/: bounds.py  box.py  exponential.py  gaussian.py  gsobject.py  image.py  shear.py  sum.py  transform.py  utilities.py  wcs.py
jax_galsim/: __init__.py  _pyfits.py  angle.py  bandpass.py  bessel.py  bounds.py  box.py  celestial.py  chromatic.py  convolve.py  deltafunction.py  deprecated.py  errors.py  exponential.py  fits.py  fitswcs.py  gaussian.py  gsobject.py  gsparams.py  helpers.py  hsm.py  image.py  integ.py  integrate.py  interpolant.py  interpolate.py  interpolatedimage.py  moffat.py  noise.py  photon_array.py  position.py  random.py  sed.py  sensor.py  shear.py  spergel.py  sum.py  table.py  test_fft.py  test_noise.py  (+5 more)
notebooks/: draw_scripts.py  timing_tests_cpu.py
output/: test_comments_im2.fits
scripts/: draw_scene_functions.py  timing_tests_cpu.py  timing_tests_cpu_batch_size.py  update_api_coverage.py
tests/: Image_comparison_images  SBProfile_comparison_images  conftest.py  des_data  fits_file  galsim_test_helpers.py  galsim_tests_config.yaml  test_exponential.py  test_gaussian.py  test_position.py  test_sum.py
(+91 files in other folders)
