[build-system]
requires = [
    "setuptools>=45",
]
build-backend = "setuptools.build_meta"

[project]
name = "JAX-GalSim"
authors = [
    {name = "GalSim Developers"},
]
description = "The modular galaxy image simulation toolkit, but in JAX"
version = "0.0.1rc1"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "numpy >=1.18.0",
    "galsim >=2.3.0",
    "jax >=0.8.0",
    "astropy >=2.0",
    "quadax",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-codspeed"]

[project.urls]
home = "https://github.com/GalSim-developers/JAX-GalSim"

[tool.setuptools.packages.find]
include = ["jax_galsim*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["C901", "E203", "E501"]
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/GalSim/tests/",
    "tests/jax",
    "tests/Coord/tests/",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
